--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,4 +4,13 @@ python-dotenv
 twilio
 Flask-Cors
 APScheduler
-gunicorn==19.7.1
+
+click==8.1.3
+Flask==2.2.2
+gunicorn==20.1.0
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.2.2
+zipp==3.10.0
