--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,3 @@
-Flask
 pymongo
 python-dotenv
 twilio
@@ -15,4 +14,6 @@ MarkupSafe==2.1.1
 Werkzeug==2.2.2
 zipp==3.10.0
 
-waitress
+Flask==2.0.3
+waitress==2.1.2
+cryptography==39.0.1
